完善controller的方法,保证每一个方法都可用postman测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.datasource.password=heu19530901
 # Spring Data JPA / Hibernate 配置
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# 将Spring Web的日志级别设为TRACE，可以看到详细的请求分发和处理信息
+logging.level.org.springframework.web=TRACE
+
+# 将JdbcTemplate的日志级别设为DEBUG，可以看到它执行的SQL语句
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
