OTD+验证输入+全局异常处理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ logging.level.org.springframework.web=TRACE
 
 # 将JdbcTemplate的日志级别设为DEBUG，可以看到它执行的SQL语句
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+
+# 控制在错误响应中是否包含数据绑定和验证的错误详情
+# always: 总是包含
+#server.error.include-binding-errors=always
