PageAbel+Specification实现get功能增强

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ logging.level.org.springframework.web=TRACE
 # 将JdbcTemplate的日志级别设为DEBUG，可以看到它执行的SQL语句
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 
+# 指定Hibernate的物理命名策略，将Java的驼峰命名自动映射到数据库的下划线命名
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+
 # 控制在错误响应中是否包含数据绑定和验证的错误详情
 # always: 总是包含
 #server.error.include-binding-errors=always
